# curveql

./: README.md  components.py  config.py  data.py  model_io.py  plots.py  pyproject.toml  results.py  sidebar.py  streamlit_app.py  styles.py  utils.py
app/: components.py  config.py  data.py  model_io.py  plots.py  results.py  sidebar.py  streamlit_app.py  styles.py  utils.py
classifier_output/: requirements_lock.txt
classifier_output/saved_models_selected/: HGB_selected_pipeline_20260702_224553.joblib  HGB_selected_pipeline_20260702_224553.manifest.json  HGB_selected_pipeline_20260707_000559.joblib  HGB_selected_pipeline_20260707_000559.manifest.json  HGB_selected_pipeline_20260709_134823.manifest.json  HGB_selected_pipeline_20260709_233829.manifest.json  HGB_selected_pipeline_20260710_023156.joblib  HGB_selected_pipeline_20260710_023156.manifest.json  HGB_selected_pipeline_20260710_201428.manifest.json  HGB_selected_pipeline_20260711_025948.manifest.json  HGB_selected_pipeline_20260711_043108.joblib  HGB_selected_pipeline_20260711_043108.manifest.json  HGB_selected_pipeline_20260711_050058.joblib  HGB_selected_pipeline_20260711_050058.manifest.json  HGB_selected_pipeline_20260711_141012.manifest.json  HGB_selected_pipeline_20260711_164843.manifest.json  HGB_selected_pipeline_20260711_182111.joblib  HGB_selected_pipeline_20260711_182111.manifest.json  (+46 more)
gen_testdata/: EDA AND FS.ipynb  GrowthQA_Classifier_V03.ipynb  Stage1_Feature_Analysis_And_Selection.ipynb  split_stability_per_seed.csv  split_stability_summary.csv  table_7_2_split_stability.csv
(+154 files in other folders)
