[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curveql"
version = "0.1.0"
description = "GrowthQC: preprocessing, metadata extraction and classification of bacterial growth curves"
authors = [{ name = "Prerna Thapliyal" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.2",
    "scipy==1.15.3",
    "statsmodels",
    "scikit-learn==1.2.0",
    "joblib",
    "openpyxl",
    "matplotlib",
    "plotly",
    "streamlit>=1.40.0,<2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
